MYSCHOOL CHANGELOG
=============================================

CREATOR: THESPACECODER
WEBSITE: http://myschool.thespacecoder.com/
GIT REPO: https://github.com/TheSpaceCoder/mySchool
SUPPORT: https://github.com/TheSpaceCoder/mySchool/issues
LICENSE: MIT LICENSE


CURRENT VERSION
---------------------------------------------
ADDED: HOMEWORK DESCRIPTION



PUBLIC RELEASE V1.0.3
---------------------------------------------
ADDED: FIRST DAY OF SCHOOL EVENT

CHANGED: CALENDAR

REMOVED: TEST.HTML

FIXED: BLUE GOLD BUGFIX



PUBLIC RELEASE V1.0
---------------------------------------------
ADDED: SHOW UPCOMING HOMEWORK
ADDED: SCHOOL PAGE
ADDED: ABOUT PAGE
ADDED: HOMEWORK FEATURE
ADDED: FINAL EXAMS EVENT

CHANGED: FRONT PAGE
CHANGED: CODE CLEANUP
CHANGED: STYLING

FIXED: KILLED BUGS



BETA V0.8.5
---------------------------------------------
ADDED: ANGULAR JS
ADDED: VIEWS
ADDED: HOMEWORK PAGE (NOT FUNTIONAL)
ADDED: NEW STYLING
ADDED: NO SCHOOL EVENT

CHANGED: ANGULAR JS FOR PAGES
CHANGED: CODE CLEANUP
CHANGED: STYLING

FIXED: KILLED BUGS



ALPHA V0.7.5
---------------------------------------------
ADDED: STYLING
ADDED: NAV SIDEBAR
ADDED: FONTS

CHANGED: PAGE REDESIGN
CHANGED: CODE CHANGES

FIXED: API NOT RESPONDING
FIXED: LOGIN BUG
FIXED: OTHER SMALL ISSUES