@@ -1,8 +1,22 @@
 <h2>About the App And Us</h2>
 
 <div class="container ">
-  <div class="col-sm-6 col-sm-offset-3 text-left paragraph">
-    
-    <p>Hello there! First off, I would like to thank you for using our app. Under the help Mr. Mcfadden, Dean and I (Nicholas) are both finishing up our Junior year of Highschool while creating this app. Clearly this app is designed to help students know what day of the block schedule it is as well as helping students stay organized. Knowing our goal, it is to at some point be able to help multiple schools nationwide have an easy and compact way for students know block schedule and organize their homework assignments.</p>
+  <div class="col-sm-6 col-sm-offset-3 text-left">
+    <div class="paragraph">
+
+      <!--<p>Hello there! First off, I would like to thank you for using our app. Under the help Mr. Mcfadden, Dean and I (Nicholas) are both finishing up our Junior year of Highschool while creating this app. Clearly this app is designed to help students know what day of the block schedule it is as well as helping students stay organized. Knowing our goal, it is to at some point be able to help multiple schools nationwide have an easy and compact way for students know block schedule and organize their homework assignments.</p>-->
+
+      <p>Thank you for checking out mySchool. This app was created by me Dean Sellas, with the Help of Nick Horvat so that we could have a agenda for all of our classes. This webapp was built using HTML, CSS, Angular JS, Javascript, and the Google Calendar API. I have plans on porting it over to a native iOS and Android app if it becomes popular enough, but at the moment I am focusing on the web build by adding new features and killing bugs (if all that went over your head don't worry it was suppose to). If you are using this app and run into any problems, have a question, or if you just want to tell me about your experience feel free to tweet me <a href="https://twitter.com/TheSpaceCoder" target="_blank">@TheSpaceCoder</a> or send me an email to <a href="mailto:contact@thespaceocoder.com">contact@thespacecoder.com</a>. I hope you have an enjoyable experience and find this app just as useful as we do.</p>
+    </div>
+
+
+    <h2>Credits</h2>
+    <ul>
+      <li>Dean Sellas - Creator and lead programmer</li>
+      <li>Nicholas Horvat - Designer</li>
+      <li>Mr. MacFadden - Idea</li>
+    </ul>
+
   </div>
+
 </div>
