@@ -1,0 +1,56 @@
+<h2>Clubs</h2>
+<h4>PAGE UNDER CONSTRUCTION</h4>
+
+<div class="container ">
+  <div class="col-sm-6 col-sm-offset-3">
+
+
+    <div class="form-group">
+      <label class="homeworkLabel" for="assignment">Club Name:</label>
+      <input placeholder="Engineering Club..." type="text" class="form-control" id="assignment">
+    </div>
+    
+    <div class="form-group">
+      <label class="homeworkLabel" for="description">Club Description:</label>
+      <input placeholder="We Do..." type="text" class="form-control" id="description">
+    </div>
+
+    <div class="form-group">
+      <label class="homeworkLabel" for="description">Attendees:</label>
+      <input placeholder="Add members emails. seperate with a comma &quot;,&quot;" type="text" class="form-control" id="description">
+    </div>
+    
+    <div class="form-group">
+      <label class="homeworkLabel" for="dueDate">Meeting:</label>
+      <input type="date" class="form-control" id="dueDate">
+    </div>
+
+    <!--<div class="forum-group">
+      <button class="btn btn-default" id="addAssignment" onclick="addHomework()">Add Club</button> -->
+    </div>
+  </div>
+</div>
+
+<script>
+ function setInputDate() {
+    var _dat = document.querySelector("#dueDate");
+    var hoy = new Date(),
+    d = hoy.getDate(),
+    m = hoy.getMonth() + 1,
+    y = hoy.getFullYear(),
+    data;
+
+    if (d < 10) {
+      d = "0" + d;
+    }
+    if (m < 10) {
+      m = "0" + m;
+    }
+
+    data = y + "-" + m + "-" + d;
+    console.log('Today is: ' + data);
+    _dat.value = data;
+  }
+
+  setInputDate();
+</script>
