@@ -1,16 +1,16 @@
 <p id="output"></p>
 
 <div class="col-sm-offset-2 col-sm-4 homework subsection">
-  <h3>Upcomming Homework</h3>
+  <h3>Upcoming Homework</h3>
 
   <div id="upcomingHomework">
   </div>
 </div>
 
 <div class="col-sm-4 clubs subsection">
-  <h3>Upcomming Club Meetings</h3>
+  <h3>Upcoming Club Meetings</h3>
 
   <div id="clubs">
-    <p>No Upcomming Club Meetings.</p>
+    <p>No Upcoming Club Meetings.</p>
   </div>
 </div>
