@@ -69,6 +69,9 @@
           <a class="sidebar-nav-link" id="homework" href="#/homework">Homework</a>
         </li>
         <li>
+          <a class="sidebar-nav-link" id="clubs" href="#/clubs">Clubs</a>
+        </li>
+        <li>
           <a class="sidebar-nav-link" id="school" href="#/school">School</a>
         </li>
         <li>
@@ -77,7 +80,7 @@
 
       </ul>
       
-      <p class="credit">App Created by <a href="http://thespacecoder.com/" target="_blank">Dean Sellas</a> and Nicholas Horvat</p>
+      <p class="credit">App Created by <a href="http://thespacecoder.com/" target="_blank">Dean Sellas</a> and <a href="#/clubs">Nicholas Horvat</a></p>
       
     </div>
 
