@@ -11,6 +11,11 @@ LICENSE: MIT LICENSE
 CURRENT VERSION
 ---------------------------------------------
 ADDED: HOMEWORK DESCRIPTION
+ADDED: CLUBS PAGE (NOT WORKING YET)
+
+CHANGES: ABOUT PAGE
+
+FIXED: GOOGLE API
 
 
 
